## Process this file with automake to produce Makefile.in
#
#   Makefile.am
#
#  from Persistence of Vision Raytracer
#  Copyright 1995,1999 Persistence of Vision Team
#---------------------------------------------------------------------------
#  NOTICE: This source code file is provided so that users may experiment
#  with enhancements to POV-Ray and to port the software to platforms other
#  than those supported by the POV-Ray Team.  There are strict rules under
#  which you are permitted to use this file.  The rules are in the file
#  named POVLEGAL.DOC which should be distributed with this file.
#  If POVLEGAL.DOC is not available or for more info please contact the POV-Ray
#  Team Coordinator by email to team-coord@povray.org or visit us on the web at
#  http://www.povray.org. The latest version of POV-Ray may be found at this 
#  site.
#
# This program is based on the popular DKB raytracer version 2.12.
# DKBTrace was originally written by David K. Buck.
# DKBTrace Ver 2.0-2.12 were written by David K. Buck & Aaron A. Collins.
#
#
##############################################################################
povincdir = @datadir@/povray-3.5/include
povinc_DATA = ash.map benediti.map bubinga.map bumpmap_.png cedar.map chars.inc colors.inc consts.inc crystal.ttf cyrvetic.ttf debug.inc finish.inc fract003.png logo.inc glass.inc golds.inc marbteal.map metals.inc mtmand.pot mtmandj.png orngwood.map pinkmarb.map plasma2.png plasma3.png povmap.png rad_def.inc rdgranit.map shapes.inc shapes2.inc shapesq.inc skies.inc spiral.df3 stage1.inc stars.inc stdcam.inc stoneold.inc stones.inc stones1.inc stones2.inc teak.map test.png textures.inc timrom.ttf ttffonts.cat whiteash.map woodmaps.inc woods.inc arrays.inc functions.inc glass_old.inc math.inc povlogo.ttf rand.inc screen.inc shapes_old.inc stdinc.inc strings.inc sunpos.inc transforms.inc 
EXTRA_DIST = ash.map benediti.map bubinga.map bumpmap_.png cedar.map chars.inc colors.inc consts.inc crystal.ttf cyrvetic.ttf debug.inc finish.inc fract003.png logo.inc glass.inc golds.inc marbteal.map metals.inc mtmand.pot mtmandj.png orngwood.map pinkmarb.map plasma2.png plasma3.png povmap.png rad_def.inc rdgranit.map shapes.inc shapes2.inc shapesq.inc skies.inc spiral.df3 stage1.inc stars.inc stdcam.inc stoneold.inc stones.inc stones1.inc stones2.inc teak.map test.png textures.inc timrom.ttf ttffonts.cat whiteash.map woodmaps.inc woods.inc arrays.inc functions.inc glass_old.inc math.inc povlogo.ttf rand.inc screen.inc shapes_old.inc stdinc.inc strings.inc sunpos.inc transforms.inc 
