## Process this file with automake to produce Makefile.in
#
#   Makefile.am
#
#  from Persistence of Vision Raytracer
#  Copyright 1995,1999 Persistence of Vision Team
#---------------------------------------------------------------------------
#  NOTICE: This source code file is provided so that users may experiment
#  with enhancements to POV-Ray and to port the software to platforms other
#  than those supported by the POV-Ray Team.  There are strict rules under
#  which you are permitted to use this file.  The rules are in the file
#  named POVLEGAL.DOC which should be distributed with this file.
#  If POVLEGAL.DOC is not available or for more info please contact the POV-Ray
#  Team Coordinator by email to team-coord@povray.org or visit us on the web at
#  http://www.povray.org. The latest version of POV-Ray may be found at this 
#  site.
#
# This program is based on the popular DKB raytracer version 2.12.
# DKBTrace was originally written by David K. Buck.
# DKBTrace Ver 2.0-2.12 were written by David K. Buck & Aaron A. Collins.
#
#
##############################################################################
SUBDIRS = balcony blocks cats cliche drums2 fish13 glasschess ionic5 newltpot ntreal piece2 piece3 teapot 
advanceddir = @datadir@/povray-3.5/scenes/advanced
advanced_DATA = abyss.pov benchmark.pov biscuit.pov bwstripe.pov chess2.pov desk.ini desk.pov diffract.pov float5.pov gaussianblob.pov grenadine.pov infinitybox.pov isocacti.pov lamppost.pov landscape.pov lemon.inc mediasky.pov mist.pov mtmand.par mtmand.pov newdiffract.pov object_pattern.pov optics.pov quilt1.pov skyvase.pov sombrero.pov sunsethf.pov swirlbox.pov wallstucco.pov whiltile.pov wineglass.pov woodbox.pov 
EXTRA_DIST = abyss.pov benchmark.pov biscuit.pov bwstripe.pov chess2.pov desk.ini desk.pov diffract.pov float5.pov gaussianblob.pov grenadine.pov infinitybox.pov isocacti.pov lamppost.pov landscape.pov lemon.inc mediasky.pov mist.pov mtmand.par mtmand.pov newdiffract.pov object_pattern.pov optics.pov quilt1.pov skyvase.pov sombrero.pov sunsethf.pov swirlbox.pov wallstucco.pov whiltile.pov wineglass.pov woodbox.pov 
