## Process this file with automake to produce Makefile.in
#
#   Makefile.am
#
#  from Persistence of Vision Raytracer
#  Copyright 1995,1999 Persistence of Vision Team
#---------------------------------------------------------------------------
#  NOTICE: This source code file is provided so that users may experiment
#  with enhancements to POV-Ray and to port the software to platforms other
#  than those supported by the POV-Ray Team.  There are strict rules under
#  which you are permitted to use this file.  The rules are in the file
#  named POVLEGAL.DOC which should be distributed with this file.
#  If POVLEGAL.DOC is not available or for more info please contact the POV-Ray
#  Team Coordinator by email to team-coord@povray.org or visit us on the web at
#  http://www.povray.org. The latest version of POV-Ray may be found at this 
#  site.
#
# This program is based on the popular DKB raytracer version 2.12.
# DKBTrace was originally written by David K. Buck.
# DKBTrace Ver 2.0-2.12 were written by David K. Buck & Aaron A. Collins.
#
#
##############################################################################
SUBDIRS = csg quartic 
objectsdir = @datadir@/povray-3.5/scenes/objects
objects_DATA = bezier.pov blob1a.pov blob1b.pov blob1c.pov blob.pov box.pov chesmsh.pov chess.inc crater_dat.pov crater.pov fractal1.pov fractal2.pov fractal3.pov fractal4.pov isosurfaces.pov lathe1a.pov lathe1b.pov lathe1c.pov lathe2.pov mesh2.pov pawns.pov polygon.pov primitiv.pov prism1.pov prism2.pov prism3a.pov prism3b.pov prism3c.pov prism3.inc sor1.pov superel1.pov superel2.pov superel3.pov torus1.pov ttf1.pov wtorus.pov 
EXTRA_DIST = bezier.pov blob1a.pov blob1b.pov blob1c.pov blob.pov box.pov chesmsh.pov chess.inc crater_dat.pov crater.pov fractal1.pov fractal2.pov fractal3.pov fractal4.pov isosurfaces.pov lathe1a.pov lathe1b.pov lathe1c.pov lathe2.pov mesh2.pov pawns.pov polygon.pov primitiv.pov prism1.pov prism2.pov prism3a.pov prism3b.pov prism3c.pov prism3.inc sor1.pov superel1.pov superel2.pov superel3.pov torus1.pov ttf1.pov wtorus.pov 
