## Process this file with automake to produce Makefile.in
#
#   Makefile.am
#
#  from Persistence of Vision Raytracer
#  Copyright 1995,1999 Persistence of Vision Team
#---------------------------------------------------------------------------
#  NOTICE: This source code file is provided so that users may experiment
#  with enhancements to POV-Ray and to port the software to platforms other
#  than those supported by the POV-Ray Team.  There are strict rules under
#  which you are permitted to use this file.  The rules are in the file
#  named POVLEGAL.DOC which should be distributed with this file.
#  If POVLEGAL.DOC is not available or for more info please contact the POV-Ray
#  Team Coordinator by email to team-coord@povray.org or visit us on the web at
#  http://www.povray.org. The latest version of POV-Ray may be found at this 
#  site.
#
# This program is based on the popular DKB raytracer version 2.12.
# DKBTrace was originally written by David K. Buck.
# DKBTrace Ver 2.0-2.12 were written by David K. Buck & Aaron A. Collins.
#
#
##############################################################################
portfoliodir = @datadir@/povray-3.5/scenes/portfolio
portfolio_DATA = allnormals.ini allnormals.pov allobjects.ini allobjects.pov allpat1iso.ini allpat1iso.pov allpat2iso.ini allpat2iso.pov allpatterns.ini allpatterns.pov c_colors.ini c_colors.pov __empty.ini __empty.pov f_finish.ini f_finish.pov html_gen.inc index.html m_textures.ini m_textures.pov o_2shapes.ini o_2shapes.pov o_shapes.ini o_shapes_old.ini o_shapes_old.pov o_shapes.pov o_shapesq.ini o_shapesq.pov p_skies.ini p_skies.pov p_textures.ini p_textures.pov p_woods.ini p_woods.pov readme.txt t_1stones.ini t_1stones.pov t_2stones.ini t_2stones.pov t_metals.ini t_metals.pov t_stars.ini t_stars.pov t_textures.ini t_textures.pov t_woods.ini t_woods.pov 
EXTRA_DIST = allnormals.ini allnormals.pov allobjects.ini allobjects.pov allpat1iso.ini allpat1iso.pov allpat2iso.ini allpat2iso.pov allpatterns.ini allpatterns.pov c_colors.ini c_colors.pov __empty.ini __empty.pov f_finish.ini f_finish.pov html_gen.inc index.html m_textures.ini m_textures.pov o_2shapes.ini o_2shapes.pov o_shapes.ini o_shapes_old.ini o_shapes_old.pov o_shapes.pov o_shapesq.ini o_shapesq.pov p_skies.ini p_skies.pov p_textures.ini p_textures.pov p_woods.ini p_woods.pov readme.txt t_1stones.ini t_1stones.pov t_2stones.ini t_2stones.pov t_metals.ini t_metals.pov t_stars.ini t_stars.pov t_textures.ini t_textures.pov t_woods.ini t_woods.pov 
