## Process this file with automake to produce Makefile.in
#
#   Makefile.am
#
#  from Persistence of Vision Raytracer
#  Copyright 1995,1999 Persistence of Vision Team
#---------------------------------------------------------------------------
#  NOTICE: This source code file is provided so that users may experiment
#  with enhancements to POV-Ray and to port the software to platforms other
#  than those supported by the POV-Ray Team.  There are strict rules under
#  which you are permitted to use this file.  The rules are in the file
#  named POVLEGAL.DOC which should be distributed with this file.
#  If POVLEGAL.DOC is not available or for more info please contact the POV-Ray
#  Team Coordinator by email to team-coord@povray.org or visit us on the web at
#  http://www.povray.org. The latest version of POV-Ray may be found at this 
#  site.
#
# This program is based on the popular DKB raytracer version 2.12.
# DKBTrace was originally written by David K. Buck.
# DKBTrace Ver 2.0-2.12 were written by David K. Buck & Aaron A. Collins.
#
#
##############################################################################
woodsdir = @datadir@/povray-3.5/scenes/incdemo/woods
woods_DATA = ash.pov bubinga.pov cedar.pov morewood.doc orngwood.pov teak.pov testcam.inc testobjs.inc whiteash.pov wood_10.pov wood_11.pov wood_12.pov wood_13.pov wood_14.pov wood_15.pov wood_16.pov wood_17.pov wood_18.pov wood_19.pov wood_1.pov wood_2.pov wood_3.pov wood_4.pov wood_5.pov wood_6.pov wood_7.pov wood_8.pov wood_9.pov woods1.pov woods2.pov woods.doc 
EXTRA_DIST = ash.pov bubinga.pov cedar.pov morewood.doc orngwood.pov teak.pov testcam.inc testobjs.inc whiteash.pov wood_10.pov wood_11.pov wood_12.pov wood_13.pov wood_14.pov wood_15.pov wood_16.pov wood_17.pov wood_18.pov wood_19.pov wood_1.pov wood_2.pov wood_3.pov wood_4.pov wood_5.pov wood_6.pov wood_7.pov wood_8.pov wood_9.pov woods1.pov woods2.pov woods.doc 
