## Process this file with automake to produce Makefile.in
#
#   Makefile.am
#
#  from Persistence of Vision Raytracer
#  Copyright 1995,1999 Persistence of Vision Team
#---------------------------------------------------------------------------
#  NOTICE: This source code file is provided so that users may experiment
#  with enhancements to POV-Ray and to port the software to platforms other
#  than those supported by the POV-Ray Team.  There are strict rules under
#  which you are permitted to use this file.  The rules are in the file
#  named POVLEGAL.DOC which should be distributed with this file.
#  If POVLEGAL.DOC is not available or for more info please contact the POV-Ray
#  Team Coordinator by email to team-coord@povray.org or visit us on the web at
#  http://www.povray.org. The latest version of POV-Ray may be found at this 
#  site.
#
# This program is based on the popular DKB raytracer version 2.12.
# DKBTrace was originally written by David K. Buck.
# DKBTrace Ver 2.0-2.12 were written by David K. Buck & Aaron A. Collins.
#
#
##############################################################################
SUBDIRS = skies 
pigmentsdir = @datadir@/povray-3.5/scenes/textures/pigments
pigments_DATA = blkhole.pov cantelop.pov checker2.pov crack1.pov dodec2.pov eight.pov filtfun.pov interp.pov irid.pov mapper.pov mappr2.pov matmap.pov pigmap.pov pigment.pov planet.pov spiral1a.pov transmitfx.pov txtravg.pov txtrmap.pov warp1.pov warp2.pov 
EXTRA_DIST = blkhole.pov cantelop.pov checker2.pov crack1.pov dodec2.pov eight.pov filtfun.pov interp.pov irid.pov mapper.pov mappr2.pov matmap.pov pigmap.pov pigment.pov planet.pov spiral1a.pov transmitfx.pov txtravg.pov txtrmap.pov warp1.pov warp2.pov 
